# prompt-engineering-for-ai-data-engineers

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GETTING_STARTED.md  GITHUB_METADATA.md  GITHUB_SETUP_GUIDE.md  LICENSE  MODEL_GUIDE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  codeql.yml  documentation.yml  license_check.yml  maintenance.yml  markdown-link-check.yml  nightly-build.yml  notebook-tests.yml  release.yml
config/: api_keys.example.yaml  model_configs.yaml
content/module1-foundations/: README.md
content/module10-production/: README.md
content/module11-model-specific/: README.md
content/module12-cost-optimization/: README.md
content/module2-data-cleaning/: README.md
content/module3-etl-enhancement/: README.md
content/module4-documentation/: README.md
content/module5-sql-optimization/: README.md
content/module6-governance/: README.md
content/module7-realtime/: README.md
content/module8-advanced/: README.md
content/module9-modern-stack/: README.md
docs/: robots.txt
docs/overrides/: main.html
tests/: __init__.py  test_model_router.py
tests/integration/: __init__.py  test_model_backends.py
tools/: __init__.py  check_license.py  cost_tracker.py  model_router.py  setup.py
wiki/: Contributing.md  Getting-Started.md  Home.md  Model-Configuration.md  Troubleshooting.md
